docs/api/qiskit/0.19/qiskit.circuit.library.CCXGate.mdx
---
title: CCXGate (v0.19)
description: API reference for qiskit.circuit.library.CCXGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CCXGate
---

# CCXGate

<Class id="qiskit.circuit.library.CCXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/x.py" signature="CCXGate(label=None, ctrl_state=None)" modifiers="class">
  CCX gate, also known as Toffoli gate.

  **Circuit symbol:**

  ```python
  q_0: ──■──
         │
  q_1: ──■──
       ┌─┴─┐
  q_2: ┤ X ├
       └───┘
  ```

  **Matrix representation:**

$$
\begin{split}CCX q_0, q_1, q_2 =
|0 \rangle \langle 0| \otimes I \otimes I + |1 \rangle \langle 1| \otimes CX =
\begin{pmatrix}
1 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
0 & 1 & 0 & 0 & 0 & 0 & 0 & 0\\
0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\
0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\
0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\
0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
0 & 0 & 0 & 0 & 0 & 0 & 1 & 0\\
0 & 0 & 0 & 1 & 0 & 0 & 0 & 0
\end{pmatrix}\end{split}
$$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_2 and q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌───┐
    q_0: ┤ X ├
         └─┬─┘
    q_1: ──■──
           │
    q_2: ──■──
    ```

$$
\begin{split}CCX\ q_2, q_1, q_0 =
I \otimes I \otimes |0 \rangle \langle 0| + CX \otimes |1 \rangle \langle 1| =
\begin{pmatrix}
1 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
0 & 1 & 0 & 0 & 0 & 0 & 0 & 0\\
0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\
0 & 0 & 0 & 1 & 0 & 0 & 0 & 0\\
0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\
0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\
0 & 0 & 0 & 0 & 0 & 0 & 1 & 0
\end{pmatrix}\end{split}
$$
  </Admonition>

  Create new CCX gate.

  ## Attributes

  <span id="ccxgate-ctrl-state" />

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CCXGate.ctrl_state" attributeTypeHint="int">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  <span id="ccxgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.CCXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="ccxgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.CCXGate.definition" attributeTypeHint="List">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  <span id="ccxgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.CCXGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="ccxgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.CCXGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="ccxgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.CCXGate.add_decomposition" signature="CCXGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="ccxgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.CCXGate.assemble" signature="CCXGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="ccxgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.CCXGate.broadcast_arguments" signature="CCXGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="ccxgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.CCXGate.c_if" signature="CCXGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="ccxgate-control" />

  ### control

  <Function id="qiskit.circuit.library.CCXGate.control" signature="CCXGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="ccxgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.CCXGate.copy" signature="CCXGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="ccxgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.CCXGate.inverse" signature="CCXGate.inverse()">
    Return an inverted CCX gate (also a CCX).
  </Function>

  <span id="ccxgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.CCXGate.is_parameterized" signature="CCXGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="ccxgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.CCXGate.mirror" signature="CCXGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="ccxgate-power" />

  ### power

  <Function id="qiskit.circuit.library.CCXGate.power" signature="CCXGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="ccxgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.CCXGate.qasm" signature="CCXGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="ccxgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.CCXGate.repeat" signature="CCXGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="ccxgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.CCXGate.to_matrix" signature="CCXGate.to_matrix()">
    Return a numpy.array for the CCX gate.
  </Function>
</Class>

